erreur.txt
In file included from C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.ino:6:
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.h:48:9: warning: ISO C++ forbids declaration of 'vinyl' with no type [-fpermissive]
   48 |         vinyl();
      |         ^~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.h:49:15: error: expected class-name before '(' token
   49 |         ~vinyl();
      |               ^
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.ino:13:7: error: use of deleted function 'Vinyl::Vinyl()'
   13 | Vinyl vinyl;
      |       ^~~~~
In file included from C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.ino:6:
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.h:44:7: note: 'Vinyl::Vinyl()' is implicitly deleted because the default definition would be ill-formed:
   44 | class Vinyl : public AudioStream
      |       ^~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.h:44:7: error: no matching function for call to 'AudioStream::AudioStream()'
In file included from C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\libraries\Audio/analyze_fft256.h:31,
                 from C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\libraries\Audio/Audio.h:61,
                 from C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.ino:1:
C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\cores\teensy4/AudioStream.h:127:9: note: candidate: 'AudioStream::AudioStream(unsigned char, audio_block_t**)'
  127 |         AudioStream(unsigned char ninput, audio_block_t **iqueue) :
      |         ^~~~~~~~~~~
C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\cores\teensy4/AudioStream.h:127:9: note:   candidate expects 2 arguments, 0 provided
C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\cores\teensy4/AudioStream.h:124:7: note: candidate: 'constexpr AudioStream::AudioStream(const AudioStream&)'
  124 | class AudioStream
      |       ^~~~~~~~~~~
C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\cores\teensy4/AudioStream.h:124:7: note:   candidate expects 1 argument, 0 provided
C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\cores\teensy4/AudioStream.h:124:7: note: candidate: 'constexpr AudioStream::AudioStream(AudioStream&&)'
C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\cores\teensy4/AudioStream.h:124:7: note:   candidate expects 1 argument, 0 provided
In file included from C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:47:
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.h:48:9: warning: ISO C++ forbids declaration of 'vinyl' with no type [-fpermissive]
   48 |         vinyl();
      |         ^~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.h:49:15: error: expected class-name before '(' token
   49 |         ~vinyl();
      |               ^
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:876:18: warning: type attributes ignored after type is already defined [-Wattributes]
  876 | struct FAUST_API UI;
      |                  ^~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:877:18: warning: type attributes ignored after type is already defined [-Wattributes]
  877 | struct FAUST_API Meta;
      |                  ^~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10864:1: error: 'vinyl' does not name a type; did you mean 'Vinyl'?
10864 | vinyl::vinyl() : AudioStream(FAUST_INPUTS, new audio_block_t*[FAUST_INPUTS])
      | ^~~~~
      | Vinyl
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10906:1: error: 'vinyl' does not name a type; did you mean 'Vinyl'?
10906 | vinyl::~vinyl()
      | ^~~~~
      | Vinyl
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10925:6: error: 'vinyl' has not been declared
10925 | void vinyl::updateImp(void)
      |      ^~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp: In function 'void updateImp()':
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10937:32: warning: there are no arguments to 'receiveReadOnly' that depend on a template parameter, so a declaration of 'receiveReadOnly' must be available [-fpermissive]
10937 |             inBlock[channel] = receiveReadOnly(channel);
      |                                ^~~~~~~~~~~~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10941:21: error: 'fInChannel' was not declared in this scope; did you mean 'DMAChannel'?
10941 |                     fInChannel[channel][i] = val*DIV_16;
      |                     ^~~~~~~~~~
      |                     DMAChannel
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10945:24: error: 'fInChannel' was not declared in this scope; did you mean 'DMAChannel'?
10945 |                 memset(fInChannel[channel], 0, AUDIO_BLOCK_SAMPLES * sizeof(float));
      |                        ^~~~~~~~~~
      |                        DMAChannel
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10950:5: error: 'fDSP' was not declared in this scope
10950 |     fDSP->compute(AUDIO_BLOCK_SAMPLES, fInChannel, fOutChannel);
      |     ^~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10950:40: error: 'fInChannel' was not declared in this scope; did you mean 'DMAChannel'?
10950 |     fDSP->compute(AUDIO_BLOCK_SAMPLES, fInChannel, fOutChannel);
      |                                        ^~~~~~~~~~
      |                                        DMAChannel
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10950:52: error: 'fOutChannel' was not declared in this scope
10950 |     fDSP->compute(AUDIO_BLOCK_SAMPLES, fInChannel, fOutChannel);
      |                                                    ^~~~~~~~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10954:29: warning: there are no arguments to 'allocate' that depend on a template parameter, so a declaration of 'allocate' must be available [-fpermissive]
10954 |         outBlock[channel] = allocate();
      |                             ^~~~~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp: At global scope:
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10966:6: error: 'vinyl' has not been declared
10966 | void vinyl::update(void) { updateImp<FAUST_INPUTS, FAUST_OUTPUTS>(); }
      |      ^~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10968:6: error: 'vinyl' has not been declared
10968 | void vinyl::setParamValue(const std::string& path, float value)
      |      ^~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp: In function 'void setParamValue(const string&, float)':
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10970:5: error: 'fUI' was not declared in this scope; did you mean 'UI'?
10970 |     fUI->setParamValue(path, value);
      |     ^~~
      |     UI
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp: At global scope:
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10973:7: error: 'vinyl' has not been declared
10973 | float vinyl::getParamValue(const std::string& path)
      |       ^~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp: In function 'float getParamValue(const string&)':
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10975:12: error: 'fUI' was not declared in this scope; did you mean 'UI'?
10975 |     return fUI->getParamValue(path);
      |            ^~~
      |            UI
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp: In instantiation of 'void updateImp() [with int INPUTS = 1; int OUTPUTS = 2]':
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10966:66:   required from here
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10937:47: error: 'receiveReadOnly' was not declared in this scope
10937 |             inBlock[channel] = receiveReadOnly(channel);
      |                                ~~~~~~~~~~~~~~~^~~~~~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10943:24: error: 'release' was not declared in this scope
10943 |                 release(inBlock[channel]);
      |                 ~~~~~~~^~~~~~~~~~~~~~~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10954:37: error: 'allocate' was not declared in this scope; did you mean 'alloca'?
10954 |         outBlock[channel] = allocate();
      |                             ~~~~~~~~^~
      |                             alloca
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10960:21: error: 'transmit' was not declared in this scope
10960 |             transmit(outBlock[channel], channel);
      |             ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\giaho\Documents\3A\SON\Projet_SON\SON\vinyl\vinyl.cpp:10961:20: error: 'release' was not declared in this scope
10961 |             release(outBlock[channel]);
      |             ~~~~~~~^~~~~~~~~~~~~~~~~~~
Multiple libraries were found for "SD.h"
  Used: C:\Users\giaho\AppData\Local\Arduino15\packages\teensy\hardware\avr\1.59.0\libraries\SD
  Not used: C:\Users\giaho\AppData\Local\Arduino15\libraries\SD
exit status 1

Compilation error: expected class-name before '(' token